src/app/components/months-menu/months-menu.component.scss
$fontFamily : 'nasalization';

:host {
  background: #1a2580;
  color: #fff;
  position: fixed;
  left: auto;
  top: 0;
  right: 0;
  bottom: 0;
  width: 20%;
  min-width: 250px;
  z-index: 9999;
  font-family: $fontFamily;
  z-index : 0;
  padding-top : 8vh;
}
 
ul {
  font-size: 20px;
  line-height: 3;
  font-weight: 400;
  margin-left : 25px;
  margin-top: 0;
  list-style: none;
  display:flex;
  flex-direction: column;
  justify-content: center;
}

li {
  cursor:pointer;
  font-family: $fontFamily;
}

@media screen and (max-width:640px){
  
  :host {
    top:28vh;
    left:auto;
    right:0;
    bottom:0;
    width:100vw;
    position:scroll;
    padding-top: 2vh;
  }

  ul {
    line-height: 2;
    font-size:18px;
    flex-direction: row;
    margin-left: 0;
  }
}

